Fixed the positioning of the hidden input field so that the button is always within the clickable area.  Tested in IE7, IE8, IE9, FF4, Safari 5.1.

--- a/english.lproj/file_field.css
+++ b/english.lproj/file_field.css
@@ -1,19 +1,20 @@
 /* Common SC.FileFieldView styles - needed to work properly */
 
+@import "compass/css3";
+
 .sc-view .sc-file-field-view {
-  z-index: 9000;
   direction: ltr;
+  z-index: 9000;
 }
 
 .sc-view .sc-file-field-form {
-/*  visibility: hidden;*/
 }
 
 .sc-view .sc-file-field-input-view {
-  opacity: 0;
-  -moz-opacity: 0;
-  filter: alpha(opacity=0);
+  @include opacity(0);
   font-size: 480px;
+  position: absolute;
+  right: -10px;
 }
 
 .sc-view .sc-file-field-iframe {
