Refactored the image upload view a bit

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -43,6 +43,9 @@ $theme.sc-view.sc-image-upload-view {
         }
     }
 
+    .sc-view.sc-spinner-view-container {
+        @include border-radius(120px, 120px);
+    }
 }
 
 
