--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -3,10 +3,7 @@ $theme.sc-view.sc-image-upload-view {
     @include box-shadow(0px 1px 2px rgba(black, 0.2));
     background-color: #d7d7d7;
     background-size: cover;
-
-    * {
-        cursor: pointer !important;
-    }
+    cursor: pointer;
 
     &:hover {
         background-color: #e7e7e7;
@@ -28,10 +25,11 @@ $theme.sc-view.sc-image-upload-view {
     .icon {
         @include transition(opacity 0.1s ease-in-out);
         @include slice('../images/add-icon.png');
+        cursor: inherit;
         width: 34px;
         height: 35px;
         position: absolute;
-        top: 50%;
+        top: 52%;
         left: 50%;
         margin-left: -17px;
         margin-top: -17px;
@@ -48,4 +46,7 @@ $theme.sc-view.sc-image-upload-view {
     }
 }
 
+$theme.sc-file-field-input-view {
+          cursor: pointer !important;
+      }
 
